--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,21 +1,17 @@
 <p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-6"><%= image_tag @listing.image_url (:medium) %></div>
+  <div class="col-md-6"> 
+    <h3><%= @listing.name %></h3>
+    <h5><%= number_to_currency(@listing.price) %></h5>
+    <p><%= @listing.description %></p>
+    
+  </div>
+</div>
 
-<%= image_tag @listing.image_url %>
 
-<p>
-  <strong>Name:</strong>
-  <%= @listing.name %>
-</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @listing.description %>
-</p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @listing.price %>
-</p>
 
 <%= link_to 'Edit', edit_listing_path(@listing), class: 'btn btn-link' %> |
 <%= link_to 'Back', listings_path, class: 'btn btn-link' %>
